--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-# netflix.github.io
+﻿<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Netflix</title>
+
+  <link rel="stylesheet" href="netflix.css">
+</head>
+
+<body>
+  <div class="header">
+    <nav>
+    <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="netflix.html">News</a></li>
+</ul>
+    </nav>
+  </div>
+ 
+</body>
+
+</html>
